# Generative-AI-Learning

./: 2 - Numpy tutorial.ipynb  20 - Inheritance.ipynb  4 - Pandas, Data Frame and Data series - 1.ipynb  7 - Matplotlib (Visualization library).ipynb  8 - Seaborn Distplot, Joinplot and pairplot.ipynb  combine_notebooks.py  output.md
Agentic AI/LangGraph Learning/: pyproject.toml  requirements.txt
Agentic AI/LangGraph Learning/Building agents/: 1 - Agent Architecture.ipynb
Agentic AI/LangGraph Learning/Chatbot /: 2 - Chatbot with Tools and Memory.ipynb  3 - Chatbot with Streaming.ipynb  4 - Human in the Loop.ipynb  Basic Chatbot with Tools and Memory.ipynb  Basic Chatbot with Tools.ipynb  Basic Chatbot.ipynb
Agentic AI/LangGraph Learning/Debugging/: 2 - agent.py
Agentic AI/LangGraph Learning/Krish Sir YouTube/Monitoring and Debugging/: 1 - Using LangSmith.ipynb  2 - Single Agent Graph.py  langgraph.json
Agentic AI/LangGraph Learning/LangChain Academy Notebooks (Practice)/: 1. Simple Graph (M1).ipynb  2. Chain (M1).ipynb  3. Router (M1).ipynb  4. Agent (M1).ipynb
Agentic AI/LangGraph Learning/LangChain Academy Notebooks (Practice)/Module-1: Introduction/: 1. Simple Graph (M1).ipynb  2. Chain (M1).ipynb
Agentic AI/LangGraph Learning/LangChain Academy Notebooks (Practice)/Module-2: State and Memory/: 1. Types of State Schema.ipynb  2. State Reducers.ipynb  3. Multiple Schemas.ipynb  4. Filter and Trim messages.ipynb
Agentic AI/LangGraph Learning/MCP Server/: client.py  pyproject.toml
Deep Learning/: 0 - Introduction to Deep Learning.ipynb  (+9 more)
(+195 files in other folders)
